<resources>
    <string name="app_name">MyLogin</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="loginbutton">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="username_password_display">Display Username/password</string>
    <string name="final_text">Welcome to final activity</string>
    <string name="final_activity_button">Final Activity Button</string>
    <string name="headline_fragment">Headline Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article_fragment">Article Fragment</string>
    <string name="dynamic_button">Dynamic Button</string>
    <string name="dynamic_fragment_text">Dynamic Fragment Text</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="first_fragment_button">Open First Fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="message_appears_here">Message Appears Here</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_message">Send</string>
    <string name="message_will_display">Message will Display Here</string>
    <string name="logout_btn">Logout</string>


    <string name="user_name">pintu</string>
    <string name="user_password">pintu@123</string>
    <string name="login_preference">com.example.mylogin.sharedpreferencesexample_login_preference</string>
    <string name="login_status_preference">com.example.mylogin.sharedpreferencesexample_login_status_preference</string>
    <string name="db_activity">DB Activity</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="view_contact">VIEW CONTACT</string>
    <string name="update_contact">UPDATE CONTACT</string>
    <string name="delete_contact">DELETE CONTACT</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="enter_contact_id">Enter Contact Id</string>
    <string name="enter_name_id">Enter Name</string>
    <string name="enter_email_id">Enter Email</string>
    <string name="save">Save</string>

</resources>
